--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 body {
     background-color: lightblue;
+    padding: 0;
+    margin: 0;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+header {
+    font-size: 32px;
+    text-align: center;
+    padding: 24px;
+    margin: 24px;
 }
