--- a/style.css
+++ b/style.css
@@ -1,17 +1,42 @@
 body {
     background-color: lightblue;
-    padding: 0;
-    margin: 0;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
 }
 
 header {
-    font-size: 32px;
+    font-size: 48px;
     text-align: center;
     padding: 24px;
     margin: 24px;
+    font-weight: bold;
+    color: gray;
+    font-family: Arial, Helvetica, sans-serif;
+    border: 12px white solid;
+    border-radius: 10px;
+}
+
+p {
+    font-size: 24px;
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: white;
+}
+
+
+button {
+    font-size: 16px;
+    color: white;
+    border: 10px black;
+    padding: 10px;
+    margin: 10px;
+    background-color: purple;
+    text-align: center;
+}
+
+
+div {
+    font-size: 24px;
+}
+
+.options {
+    text-align: center;
 }
