--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
     background-color: lightblue;
+    width: 800px;
+    margin: 0 auto;
 }
 
 header {
@@ -24,11 +26,11 @@ p {
 
 button {
     font-size: 16px;
-    color: white;
+    color: purple;
     border: 10px black;
     padding: 10px;
     margin: 10px;
-    background-color: purple;
+    background-color: white;
     text-align: center;
 }
 
@@ -40,3 +42,4 @@ div {
 .options {
     text-align: center;
 }
+
