--- a/style.css
+++ b/style.css
@@ -43,3 +43,9 @@ div {
     text-align: center;
 }
 
+#flex {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
